feat(AgendamentoService/AgendamentoController):Criação do endpoint buscarPorId